kubernetes/prometheus/yaml/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kube-monitor
spec:
  selector:
    app: monitor
  ports:
  - name: prometheus-http
    port: 9090
    targetPort: 9090
  type: ClusterIP
